@@ -326,5 +326,24 @@ void File::unbufferedPut(const char* data, size_t size)
 	}
 }
 
+namespace {
+
+File openRequiredFile(const string& path, const char* mode)
+{
+	string openError;
+	File file(path, mode, openError);
+	if (!openError.empty())
+	{
+		fatal2(__("unable to open the file '%s': %s"), path, openError);
+	}
+	return std::move(file);
+}
+
+}
+
+RequiredFile::RequiredFile(const string& path, const char* mode)
+	: File(openRequiredFile(path, mode))
+{}
+
 } // namespace
 
